<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/side_nav_grp_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/side_nav_home"
            android:icon="@drawable/home_24px"
            android:title="@string/Side_nav_String_home"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_profile"
            android:icon="@drawable/account_circle_24px"
            android:title="@string/Side_nav_String_profile"
            android:visible="true"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_favorite"
            android:icon="@drawable/favorite_24px"
            android:title="@string/Side_nav_String_favorite"
            android:visible="true"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_cart"
            android:icon="@drawable/shopping_cart_24px"
            android:title="@string/Side_nav_String_shopping_cart"
            android:visible="true"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_message"
            android:icon="@drawable/chat_24px"
            android:title="@string/Side_nav_String_chat"
            android:visible="true"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_settings"
            android:icon="@drawable/settings_24px"
            android:title="@string/Side_nav_String_settings"
            android:visible="true"
            android:checkable="true"/>
    </group>

    <group android:id="@+id/side_nav_grp_auth">
        <item
            android:id="@+id/side_nav_login"
            android:icon="@drawable/login_24px"
            android:title="@string/Side_nav_String_login"/>
        <item
            android:id="@+id/side_nav_logout"
            android:icon="@drawable/logout_24px"
            android:title="@string/Side_nav_String_logout"
            android:visible="true"/>
    </group>
</menu>