<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="60dp"

    tools:context=".activity.SigninActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text_banerhead"
        android:textColor="@color/md_theme_Text"
        android:textSize="32sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/email_text_signin_hint"
        app:boxCornerRadiusTopStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusBottomEnd="24dp"
        app:endIconMode="custom"
        app:endIconTint="@color/md_theme_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signin_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_text_sigmin"
        app:boxCornerRadiusTopStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusBottomEnd="24dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/md_theme_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signin_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/signin_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password_text_signin"
        android:textColor="@color/md_theme_primary"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin_btn_signin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in_text_signinbtn"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="28dp"
        app:backgroundTint="@color/btn_color_primary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_text_signin"
            android:textColor="#808080"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/signin_txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text_use_rederect_signup"
            android:textColor="@color/md_theme_primary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_facebook_outline" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_twitter_outline" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_google_outline" />

    </LinearLayout>

</LinearLayout>